improve: jsファイル名とエントリーポイントを各ページごとに切り替わるように修正

--- a/app/views/score_details/show.html.erb
+++ b/app/views/score_details/show.html.erb
@@ -116,5 +116,5 @@
 //   beforeRequestSnapToRoads(coordinates)
 // }
 </script>
-<%= javascript_pack_tag 'score_details_show_pack' %>
+<%= javascript_pack_tag 'score_details/show_pack' %>
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap"></script>
