--- a/app/views/score_details/index.html.erb
+++ b/app/views/score_details/index.html.erb
@@ -17,7 +17,7 @@
   <% end %>
   </ol>
 
-  <%= javascript_pack_tag 'score_details_pack' %>
+  <%= javascript_pack_tag 'score_details/index_pack' %>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap"></script>
 </body>
 </html>
