--- a/app/views/scores/searches/_searched_score_field.html.erb
+++ b/app/views/scores/searches/_searched_score_field.html.erb
@@ -1,8 +1,8 @@
-<h3><%= start_time.strftime("%-m/%-d") %> 詳細</h3>
+<h3><%= params[:selected_date] %> 詳細</h3>
 <div class="js-searched-score">
   <% if @searched_score.nil? %>
     <div class="new-score-form">
-      <%= render partial: 'scores/form', locals: { score: @score, start_time: start_time } %>
+      <%= render partial: 'scores/form', locals: { score: @score, start_date: start_date, selected_date: selected_date } %>
     </div>
   <% else %>
     <p>売上: <%= @searched_score.score %> 円</p>
@@ -12,7 +12,7 @@
     <% end %>
   <% end %>
   <%= form_with url: check_scores_searches_path, method: :get, local: true do %>
-    <input name="start_time" type="hidden" value="<%= start_time %>">
+    <input name="start_time" type="hidden" value="<%= set_value_of_start_time(start_date, selected_date) %>">
     <%= button_tag '日報作成', type: 'submit', class: 'btn btn-success', method: :get %>
   <% end %>
 </div>
