add: タクシーメーター機能を追加
進んだ距離や時間から料金を計算する機能を追加

--- a/app/views/score_details/index.html.erb
+++ b/app/views/score_details/index.html.erb
@@ -1,6 +1,7 @@
 <body>
   <button id="pickup" style="font-size: 50px">pickup</button>
   <button id="dropoff" style="font-size: 50px">dropoff</button>
+  <div id="meter">0円</div>
 
   <div id="coords"></div>
   <div id="form"></div>
