add: 登録した運賃が表示されるように修正

--- a/app/views/score_details/show.html.erb
+++ b/app/views/score_details/show.html.erb
@@ -2,6 +2,7 @@
 <p><%= @score_detail.dropoff_address %></p>
 <p><%= @score_detail.pickup_time.strftime("%-H時%-M分%-S秒") %></p>
 <p><%= @score_detail.dropoff_time.strftime("%-H時%-M分%-S秒") %></p>
+<p><%= @score_detail.fare %>円</p>
 
 <p id="map"></p>
 
