--- a/app/assets/stylesheets/scores.scss
+++ b/app/assets/stylesheets/scores.scss
@@ -4,8 +4,12 @@
 
 .simple-calendar {
   .calendar-heading {
+    text-align: center;
     font-size: 1.5rem;
     padding-right: 0;
+    .js-month-jump {
+      display: none;
+    }
   }
 
   .day {
