improve: 月度ジャンプメニューを開くためにクリックする範囲を拡大

--- a/app/assets/stylesheets/scores.scss
+++ b/app/assets/stylesheets/scores.scss
@@ -105,7 +105,7 @@
     .calendar-heading {
       padding-top: 0.2rem;
       font-size: 1.3rem;
-      .jump-form {
+      .js-month-jump {
         padding: 0;
         .form-group {
           margin: 1rem 0 0.5rem 0;
