add: ヘッダー、カレンダー部分のデザインを変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,9 +11,12 @@
  * It is generally better to create a new file per style scope.
  *
  *= require bootstrap/dist/css/bootstrap.min.css
- *= require_tree .
  */
 
+// @import "flat-ui.min";
+// @import "shards.min";
+// @import "mdb.min";
+@import "custom_ui";
 @import "simple_calendar";
 @import "common";
 @import "scores";
