--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,9 +1,9 @@
 <main class="row">
-  <div class="col">
+  <div class="col calendar-page-body">
     <%= SimpleCalendar::CustomLengthCalendar.new(self, {events: @scores}).render do |date, scores| %>
       <%= date.strftime('%-m/%-d') %>
       <% scores.each do |score| %>
-        <div class="score_in_td">
+        <div class="score-in-td">
           <%= score.score %>
         </div>
       <% end %>
