--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light container-xl">
+  <nav class="navbar navbar-expand-lg navbar-light container-xl">
     <h1 class="navbar-brand"><%= link_to "売上管理", root_path %></h1>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
