add: 割増に対応
improve: 最初に取得した座標と時間を無視し、2番目からを計算対象に変更

--- a/app/views/score_details/index.html.erb
+++ b/app/views/score_details/index.html.erb
@@ -1,7 +1,8 @@
 <body>
   <button id="pickup" style="font-size: 50px">pickup</button>
   <button id="dropoff" style="font-size: 50px">dropoff</button>
-  <div id="meter">メーター料金: 0円</div>
+  <div class="extra-fee"></div>
+  <div class="meter">メーター料金: 0円</div>
 
   <div id="coords"></div>
   <div id="form"></div>
