--- a/app/assets/stylesheets/scores.scss
+++ b/app/assets/stylesheets/scores.scss
@@ -93,6 +93,11 @@
   font-size: 1.2rem;
   .row {
     margin: auto;
+    .calculated-score-field, .js-searched-score-field {
+      background-color: white;
+      border-radius: 3px;
+      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.05);
+    }
     h3 {
       font-size: 1.4rem;
       font-weight: normal;
