--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -15,5 +15,7 @@
     <%= f.text_area :memo, class:'form-control', rows: 2 %>
   </div>
 
-  <%= f.submit nil, class: 'btn btn-primary submit-new-score' %>
+  <div class="text-left">
+    <%= f.submit nil, class: 'btn btn-primary submit-new-score' %>
+  </div>
 <% end %>
