--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -1,21 +1,23 @@
-<%= form_with(model: score, local: true) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
+<div class="new-score-form">
+  <%= form_with(model: score, id: 'new-score', local: false) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
 
-  <div class='form-group'>
-    <%= f.hidden_field :start_time, value: set_value_of_start_time(start_date, selected_date) %>
-  </div>
+    <div class='form-group'>
+      <%= f.hidden_field :start_time, value: set_value_of_start_time(start_date, selected_date) %>
+    </div>
 
-  <div class='form-group text-left'>
-    <%= f.label :score, class: 'new-score-label' %>
-    <%= f.number_field :score, class:'form-control', value: "", placeholder: '円' %>
-  </div>
+    <div class='form-group text-left'>
+      <%= f.label :score, class: 'new-score-label' %>
+      <%= f.number_field :score, class:'form-control', value: "", placeholder: '円' %>
+    </div>
 
-  <div class='form-group text-left'>
-    <%= f.label :memo, class: 'new-score-label' %>
-    <%= f.text_area :memo, class:'form-control', rows: 2 %>
-  </div>
+    <div class='form-group text-left'>
+      <%= f.label :memo, class: 'new-score-label' %>
+      <%= f.text_area :memo, class:'form-control', rows: 2 %>
+    </div>
 
-  <div class="text-left">
-    <%= f.submit nil, class: 'btn btn-primary submit-new-score' %>
-  </div>
-<% end %>
+    <div class="text-left">
+      <%= f.submit nil, class: 'btn btn-primary submit-new-score' %>
+    </div>
+  <% end %>
+</div>
