--- a/app/views/scores/searches/_searched_score_field.html.erb
+++ b/app/views/scores/searches/_searched_score_field.html.erb
@@ -1,11 +1,11 @@
-<h3><%= params[:selected_date] %> 詳細</h3>
+<h3><%= start_time.to_date.strftime('%-m/%-d') %> 詳細</h3>
   <% if @searched_score.nil? %>
-      <%= render partial: 'scores/form', locals: { score: @score, start_date: start_date, selected_date: selected_date } %>
+      <%= render partial: 'scores/form', locals: { score: @score, start_time: start_time } %>
   <% else %>
     <%= render 'score', searched_score: @searched_score %>
   <% end %>
   <%= form_with url: check_scores_searches_path, method: :get, local: true do %>
-    <input name="start_time" type="hidden" value="<%= set_value_of_start_time(start_date, selected_date) %>">
+    <input name="start_time" type="hidden" value="<%= start_time %>">
     <div class="text-left">
       <%= button_tag '日報作成', type: 'submit', class: 'btn btn-success score-detail-button', method: :get %>
     </div>
