--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -3,12 +3,12 @@
     <%= render 'shared/error_messages', object: f.object %>
 
     <div class='form-group'>
-      <%= f.hidden_field :start_time, value: set_value_of_start_time(start_date, selected_date) %>
+      <%= f.hidden_field :start_time, value: start_time %>
     </div>
 
     <div class='form-group text-left'>
       <%= f.label :score, class: 'new-score-label' %>
-      <%= f.number_field :score, class:'form-control', value: "", placeholder: '円' %>
+      <%= f.number_field :score, class:'form-control', value: "#{score.score == 0 ? "" : score.score}", placeholder: '円' %>
     </div>
 
     <div class='form-group text-left'>
