--- a/app/views/scores/edit.js.erb
+++ b/app/views/scores/edit.js.erb
@@ -1,1 +1,1 @@
-$('.js-searched-score').replaceWith('<%= j(render 'edit_form', score: @score, start_time: @score.start_time.to_date) %>');
+$('.js-searched-score').replaceWith('<%= j(render 'form', score: @score, start_time: @score.start_time.to_date) %>');
