--- a/app/views/score_details/index.html.erb
+++ b/app/views/score_details/index.html.erb
@@ -4,24 +4,11 @@
   <div class="extra-fee"></div>
   <div class="meter">メーター料金: 0円</div>
 
-  <div id="coords"></div>
-  <div id="form"></div>
-  <ol class="lists">
-  <% @score_details.each do |score_detail| %>
-    <li class="score-detail-<%= score_detail.id %>">
-      <%= link_to score_score_detail_path(score_detail.score_id, score_detail) do %>
-        <%= score_detail.pickup_address %> ~
-        <%= score_detail.dropoff_address %>
-        <%= score_detail.pickup_time.strftime("%-H時%-M分%-S秒") %> ~
-        <%= score_detail.dropoff_time.strftime("%-H時%-M分%-S秒") %>
-        <%= score_detail.fare %>円
-      <% end %>
-      <%= link_to score_score_detail_path(score_detail.score_id, score_detail), method: :delete, data: { confirm: '削除しますか？' }, class: "delete-button", remote: true do %>
-        <span class="far fa-trash-alt"></span>
-      <% end %>
-    </li>
-  <% end %>
-  </ol>
+  <table border="1">
+    <tbody class="lists">
+      <%= render @score_details %>
+    </tbody>
+  </table>
 
   <%= javascript_pack_tag 'score_details/index_pack' %>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap"></script>
