--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,5 +20,6 @@
 @import "simple_calendar";
 @import "common";
 @import "scores";
+@import "score_details";
 @import "font-awesome-sprockets";
 @import "font-awesome";
