add: 月度ジャンプ機能の開閉ボタンを変更し、幅も調整

--- a/app/assets/stylesheets/scores.scss
+++ b/app/assets/stylesheets/scores.scss
@@ -162,6 +162,12 @@
       .calendar-heading {
         text-align: center;
         font-size: 1.3rem;
+        .main-field {
+          padding: 0.2rem 0.5rem;
+          .calendar-title {
+            line-height: 100%;
+          }
+        }
         .js-month-jump {
           .form-group {
             margin: 0;
