--- a/app/views/simple_calendar/_custom_length_calendar.html.erb
+++ b/app/views/simple_calendar/_custom_length_calendar.html.erb
@@ -3,7 +3,7 @@
     <div class="main-field">
       <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %>
       <span class="calendar-title"><%= t('date.month_names')[date_range.last.month] + '度' %> <%= date_range.last.year %></span>
-      <span class="js-toggle-button">▼</span>
+      <span class="js-toggle-button fas fa-caret-down"></span>
       <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
     </div>
       <%= render 'scores/month_jump', start_date: start_date %>
