--- a/app/assets/stylesheets/scores.scss
+++ b/app/assets/stylesheets/scores.scss
@@ -13,9 +13,19 @@
       .calendar-title {
         line-height: 3rem;
       }
+      .js-toggle-button {
+        margin-left: 0.2rem;
+      }
+      .month-buttons {
+        float: right;
+        a {
+          margin-left: 1rem;
+        }
+      }
     }
     .js-month-jump {
       display: none;
+      text-align: center;
     }
   }
 
@@ -160,10 +170,10 @@
     .simple-calendar {
       top: -1.5rem;
       .calendar-heading {
-        text-align: center;
         font-size: 1.3rem;
         .main-field {
           padding: 0.2rem 0.5rem;
+          color: #007bff;
           .calendar-title {
             line-height: 100%;
           }
