add: タイトルのスタイルを変更

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -16,6 +16,8 @@ body {
     margin: auto auto auto 8px;
     a {
       color: #495057;
+      border-left: 5px #007bff solid;
+      padding-left: 0.5rem;
     }
   }
   .dropdown-custom.dropdown-menu {
