--- a/app/assets/stylesheets/scores.scss
+++ b/app/assets/stylesheets/scores.scss
@@ -10,8 +10,12 @@
     .main-field {
       margin-top: 0.5rem;
       margin-bottom: 0.2rem;
-      .calendar-title {
-        line-height: 3rem;
+      text-align: center;
+      .previous-link {
+        float: left;
+      }
+      .next-link {
+        float: right;
       }
       .js-toggle-button {
         margin-left: 0.2rem;
@@ -168,15 +172,13 @@
     padding-right: 8px;
     padding-left: 8px;
     .simple-calendar {
-      top: -1.5rem;
       .calendar-heading {
         font-size: 1.3rem;
         .main-field {
           padding: 0.2rem 0.5rem;
+          line-height: 1.8rem;
+          font-size: 1rem;
           color: #007bff;
-          .calendar-title {
-            line-height: 100%;
-          }
         }
         .js-month-jump {
           .form-group {
