--- a/app/views/simple_calendar/_custom_length_calendar.html.erb
+++ b/app/views/simple_calendar/_custom_length_calendar.html.erb
@@ -1,12 +1,14 @@
 <div class="simple-calendar">
   <div class="calendar-heading">
     <div class="main-field">
-      <span class="calendar-title"><%= date_range.last.year %>年<%= t('date.month_names')[date_range.last.month] + '度' %></span>
-      <span class="js-toggle-button fas fa-caret-down"></span>
-      <div class="month-buttons">
+      <div class="previous-link">
         <%= link_to(calendar.url_for_previous_view) do %>
           <i class="fas fa-angle-double-left"></i>
         <% end %>
+      </div>
+      <span class="calendar-title"><%= date_range.last.year %>年<%= t('date.month_names')[date_range.last.month] + '度' %></span>
+      <span class="js-toggle-button fas fa-caret-down"></span>
+      <div class="next-link">
         <%= link_to(calendar.url_for_next_view) do %>
           <i class="fas fa-angle-double-right"></i>
         <% end %>
