--- a/app/views/score_details/index.html.erb
+++ b/app/views/score_details/index.html.erb
@@ -8,8 +8,10 @@
     </div>
   </div>
 
-  <div class="extra-fee"></div>
-  <div class="meter">メーター料金: 0円</div>
+  <div class="meter">
+    <p class="meter-fare">0</p>
+    <p class="meter-yen">円</p>
+  </div>
 
   <div class="row">
     <table border="1" class="col-12">
