--- a/app/views/score_details/index.html.erb
+++ b/app/views/score_details/index.html.erb
@@ -14,7 +14,7 @@
   </div>
 
   <div class="row">
-    <table border="1" class="col-12">
+    <table border="1" class="score-detail-table col-12">
       <tbody class="lists">
         <%= render @score_details %>
       </tbody>
