--- a/app/assets/stylesheets/score_details.scss
+++ b/app/assets/stylesheets/score_details.scss
@@ -35,25 +35,31 @@
   }
 }
   
-table {
+.score-detail-table {
   counter-reset: rowCount;
   background-color: white;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.05);
   border: none;
 }
 
-table > tbody > tr {
+.score-detail-table > tbody > tr {
   counter-increment: rowCount;
+  cursor: pointer;
 }
 
-table > tbody > tr > td {
+.score-detail-table > tbody > .score-detail-tr:hover {
+  background-color: rgba(118, 203, 255, 0.7);
+}
+
+.score-detail-table > tbody > tr > td {
+  color: rgb(0, 123, 255);
   border-left: none;
   border-right: none;
   border-bottom: solid 1px rgb(230, 230, 230);
   padding: 1rem 0.3rem;
 }
 
-table > tbody > tr > td:first-child::before {
+.score-detail-table > tbody > tr > td:first-child::before {
   content: counter(rowCount);
 }
 
