--- a/app/views/score_details/index.html.erb
+++ b/app/views/score_details/index.html.erb
@@ -1,16 +1,12 @@
 <body>
-  <div class="texi-meter-buttons row">
-    <div class="col-6">
-      <button id="pickup" class="btn" style="font-size: 30px">pickup</button>
+  <div class="texi-meter row">
+    <div class="meter-display col-6">
+      <p class="meter-fare">0</p>
+      <p class="meter-yen">円</p>
     </div>
-    <div class="col-6">
-      <button id="dropoff" class="btn" style="font-size: 30px">dropoff</button>
+    <div class="meter-button col-6">
+      <button id="pickup" class="btn pickup-button">実車</button>
     </div>
-  </div>
-
-  <div class="meter">
-    <p class="meter-fare">0</p>
-    <p class="meter-yen">円</p>
   </div>
 
   <div class="row">
