--- a/app/views/score_details/_score_detail.html.erb
+++ b/app/views/score_details/_score_detail.html.erb
@@ -1,7 +1,13 @@
 <tr class="score-detail-tr score-detail-<%= score_detail.id %>" data-href="/scores/<%= score_detail.score_id %>/score_details/<%= score_detail.id %>">
   <td class="number"></td>
-  <td class="pickup-time"><%= score_detail.pickup_time.strftime("%H:%M") %></td>
-  <td class="dropoff-time"><%= score_detail.dropoff_time.strftime("%H:%M") %></td>
+  <td class="time">
+    <div class="pickup-time">
+      <%= score_detail.pickup_time.strftime("%H:%M") %>
+    </div>
+    <div class="dropoff-time">
+      <%= score_detail.dropoff_time.strftime("%H:%M") %>
+    </div>
+  </td>
   <td class="pickup-address"><%= score_detail.pickup_address %></td>
   <td class="pickup-address"><%= score_detail.dropoff_address %></td>
   <td class="fare"><%= score_detail.fare %></td>
