--- a/app/assets/stylesheets/score_details.scss
+++ b/app/assets/stylesheets/score_details.scss
@@ -8,6 +8,7 @@
       position: relative;
       box-shadow: 0 5px 1px rgba(0,0,0,0.7);
       border-radius:4px;
+      width: 60%;
     }
     .pickup-button {
       background-color: #007bff;
@@ -77,3 +78,12 @@
   content: counter(rowCount);
 }
 
+@media (max-width: 767px) {
+  .texi-meter {
+    .meter-button {
+      .btn {
+        width: 100%;
+      }
+    }
+  }
+}
