add: 売上詳細の編集と削除をドロップダウンで表示する機能をzissou

--- a/app/assets/stylesheets/score_details.scss
+++ b/app/assets/stylesheets/score_details.scss
@@ -78,6 +78,10 @@
   content: counter(rowCount);
 }
 
+.dropdown-toggle:after {
+  display: none;
+}
+
 @media (max-width: 767px) {
   .texi-meter {
     .meter-button {
