--- a/app/assets/stylesheets/score_details.scss
+++ b/app/assets/stylesheets/score_details.scss
@@ -82,6 +82,13 @@
   display: none;
 }
 
+.menus {
+  .dropdown-menu {
+    text-align: center;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.07), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  }
+}
+
 @media (max-width: 767px) {
   .texi-meter {
     .meter-button {
