--- a/app/assets/stylesheets/score_details.scss
+++ b/app/assets/stylesheets/score_details.scss
@@ -95,7 +95,7 @@
 }
 
 .score-detail-show-table {
-  margin: auto;
+  margin: 0.5rem 0 1rem 0;
   text-align: center;
   height: 10rem;
   width: 100%;
