--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -49,6 +49,9 @@ body {
   justify-content: center;
   align-items: center;
   .form-area {
+    padding: 3rem;
+    background-color: white;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.05);
     h1 {
       font-size: 2rem;
       margin-bottom: 1rem;
@@ -71,11 +74,6 @@ body {
       margin: 1rem 0;
     }
   }
-}
-
-.login-page {
-  position: relative;
-  top: -3rem;
 }
 
 @media (max-width: 767px) {
