--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -34,7 +34,7 @@ body {
 
 .flash-messages {
   width: max-content;
-  margin: auto;
+  margin: auto auto 2rem auto;
 }
 
 .container-xl {
@@ -54,7 +54,7 @@ body {
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.05);
     h1 {
       font-size: 2rem;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
     }
     .error-messages-field {
       max-width: 90vw;
