add: ユーザープロフィール画面のデザイン、フラッシュメッセージの場所を変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 @import "simple_calendar";
 @import "common";
 @import "scores";
+@import "users";
 @import "score_details";
 @import "font-awesome-sprockets";
 @import "font-awesome";
