add: start_dateをパラメーターで渡す処理を追加

--- a/app/views/scores/searches/_searched_score_field.html.erb
+++ b/app/views/scores/searches/_searched_score_field.html.erb
@@ -1,6 +1,6 @@
 <h3><%= start_time.to_date.strftime('%-m/%-d') %> 詳細</h3>
   <% if @searched_score.nil? %>
-      <%= render partial: 'scores/form', locals: { score: @score, start_time: start_time } %>
+      <%= render partial: 'scores/form', locals: { score: @score, start_time: start_time, start_date: start_date } %>
   <% else %>
     <%= render 'score', searched_score: @searched_score %>
   <% end %>
