--- a/app/views/simple_calendar/_custom_length_calendar.html.erb
+++ b/app/views/simple_calendar/_custom_length_calendar.html.erb
@@ -47,11 +47,11 @@
   <div class="row">
     <div class="calculated-score-field col-5">
       <h3><%= t('date.month_names')[date_range.last.month] + '度' %></h3>
-      <div class="calculated-score">
-        <p>合計:</p> <p class="calculated-result"><%= "#{total_score_in_current_month(@scores_in_current_month)} 円" %></p>
+      <div class="total-score">
+        <p>合計:</p> <p class="total-score-result"><%= "#{total_score_in_current_month(@scores_in_current_month)} 円" %></p>
       </div>
-      <div class="calculated-score">
-        <p>平均:</p> <p class="calculated-result"><%= "#{average_score_in_current_month(@scores_in_current_month)} 円" %></p>
+      <div class="average-score">
+        <p>平均:</p> <p class="average-score-result"><%= "#{average_score_in_current_month(@scores_in_current_month)} 円" %></p>
       </div>
     </div>
     <div class="js-searched-score-field col-7">
