--- a/app/views/scores/searches/_score.html.erb
+++ b/app/views/scores/searches/_score.html.erb
@@ -4,7 +4,7 @@
   <%= link_to edit_score_path(searched_score, start_date: start_date), class: "edit-button", remote: true do %>
     <span class="fas fa-edit"></span>
   <% end %>
-  <%= link_to score_path(searched_score), method: :delete, data: { confirm: '売上を削除しますか？' }, class: "delete-button", remote: true do %>
+  <%= link_to score_path(searched_score, start_date: start_date), method: :delete, data: { confirm: '売上を削除しますか？' }, class: "delete-button", remote: true do %>
     <span class="far fa-trash-alt"></span>
   <% end %>
 </div>
