improve: 月度範囲外の売上の色をグレーに変更

--- a/app/assets/stylesheets/scores.scss
+++ b/app/assets/stylesheets/scores.scss
@@ -65,7 +65,7 @@
     color: rgba(58, 56, 56, 0.352);
     background-color: white;
     .score-in-td {
-      color: rgba(58, 56, 56, 0.352);
+      color: rgba(58, 56, 56, 0.352)!important;
     }
   }
 
