add: 日報が登録されている日付に印を表示する機能を追加

--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -6,6 +6,9 @@
         <div class="score-in-td">
           <%= score.score %>
         </div>
+        <% if score.score_details.present? %>
+          <i class="fas fa-circle fa-xs has-score-detail"></i>
+        <% end %>
       <% end %>
     <% end %>
   </div>
