--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -4,7 +4,9 @@
       <%= date.strftime('%-m/%-d') %>
       <% scores.each do |score| %>
         <div class="score-in-td">
-          <%= score.score %>
+          <% if score.score > 0 %>
+            <%= score.score %>
+          <% end %>
         </div>
         <% if score.score_details.present? %>
           <i class="fas fa-circle fa-xs has-score-detail"></i>
