fix: 売上を削除したときに、全日付の日報有りマークが消えてしまう問題を修正

--- a/app/views/scores/destroy.js.erb
+++ b/app/views/scores/destroy.js.erb
@@ -1,4 +1,4 @@
-$('.<%= @score.start_time.to_date %> .score-in-td, .has-score-detail').remove();
+$('.<%= @score.start_time.to_date %> .score-in-td, .<%= @score.start_time.to_date %> .has-score-detail').remove();
 $('.js-searched-score-field').empty();
 $('.js-searched-score-field').prepend('<h3>詳細</h3>')
 $('.js-searched-score-field').append('<div class="flash-messages alert alert-success"><%= @success_message %></div>')
