--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -18,8 +18,8 @@
       <%= f.text_area :memo, class:'form-control', rows: 2 %>
     </div>
 
-    <div class="text-left">
-      <%= f.submit nil, class: 'btn btn-primary submit-new-score' %>
+    <div class="submit-button">
+      <%= f.submit nil, class: 'btn btn-primary btn-lg submit-new-score' %>
     </div>
   <% end %>
 </div>
